macros/tests/ui/interrupt_args.stderr
error: this attribute accepts only 'wake_cpu' as an argument
  --> tests/ui/interrupt_args.rs:10:1
   |
10 | #[interrupt(arg)]
   | ^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `interrupt` (in Nightly builds, run with -Z macro-backtrace for more info)
